name:                xeger
version:             0.1.0.0
-- synopsis:            
description:         Regex crossword solver based on SBV
license:             BSD3
license-file:        LICENSE
author:              Patrick Chilton
maintainer:          chpatrick@gmail.com
-- copyright:           
category:            Text
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules: Xeger
  -- other-modules:       
  extensions:    OverloadedStrings,
                 LambdaCase,
                 ScopedTypeVariables,
                 GeneralizedNewtypeDeriving,
                 TupleSections,
                 TemplateHaskell
  build-depends:       base >=4.8,
                       mtl >=2.2,
                       bytestring >=0.10,
                       containers >=0.5,
                       vector >=0.10,
                       regex-tdfa >=1.2.0,
                       http-conduit >=2.1.5,
                       text >= 1.2.0.4,
                       sbv >= 4.2,
                       lens >= 4.9,
                       aeson >= 0.8.0.2
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options:         -O2